2nd training/Community/Community/Community1/force-app/main/default/objects/Airway_Bill_Draft__c/Airway_Bill_Draft__c.object-meta.xml
<CustomObject>
    <label>Draft Airway Bill</label>
    <nameField>
        <displayFormat>DAWB{YY}{MM}{DD}-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Draft Airway Bills</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>