2nd training/Community/Community/Community1/force-app/main/default/objects/Airway_Bill_Draft__c/fields/Address_DetailsHK__c.field-meta.xml
<CustomField>
    <fullName>Address_DetailsHK__c</fullName>
    <label>Address &amp; Details</label>
    <type>TextArea</type>
</CustomField>