2nd training/Community/Community/Community1/force-app/main/default/objects/Airway_Bill_Draft__c/fields/dawbAttn__c.field-meta.xml
<CustomField>
    <fullName>dawbAttn__c</fullName>
    <label>Attn</label>
    <length>45</length>
    <type>Text</type>
</CustomField>