2nd training/Community/Community/Community1/force-app/main/default/objects/Airway_Bill_Draft__c/fields/dawbConsignee__c.field-meta.xml
<CustomField>
    <fullName>dawbConsignee__c</fullName>
    <label>Consignee</label>
    <type>TextArea</type>
</CustomField>