2nd training/Community/Community/Community1/force-app/main/default/objects/Airway_Bill_Draft__c/fields/dawbCost__c.field-meta.xml
<CustomField>
    <fullName>dawbCost__c</fullName>
    <label>Cost</label>
    <type>TextArea</type>
</CustomField>