2nd training/Community/Community/Community1/force-app/main/default/objects/Airway_Bill_Draft__c/fields/dawbDelivery_Add__c.field-meta.xml
<CustomField>
    <fullName>dawbDelivery_Add__c</fullName>
    <label>Delivery Address</label>
    <type>TextArea</type>
</CustomField>