2nd training/Community/Community/Community1/force-app/main/default/objects/Airway_Bill_Draft__c/fields/dawbDescription__c.field-meta.xml
<CustomField>
    <fullName>dawbDescription__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>