2nd training/Community/Community/Community1/force-app/main/default/objects/Airway_Bill_Draft__c/fields/dawbETA__c.field-meta.xml
<CustomField>
    <fullName>dawbETA__c</fullName>
    <label>ETA</label>
    <type>DateTime</type>
</CustomField>