2nd training/Community/Community/Community1/force-app/main/default/objects/Airway_Bill_Draft__c/fields/dawbETD__c.field-meta.xml
<CustomField>
    <fullName>dawbETD__c</fullName>
    <label>ETD</label>
    <type>DateTime</type>
</CustomField>