2nd training/Community/Community/Community1/force-app/main/default/objects/Airway_Bill_Draft__c/fields/dawbFax_Ext__c.field-meta.xml
<CustomField>
    <fullName>dawbFax_Ext__c</fullName>
    <label>Fax (Ext)</label>
    <length>25</length>
    <type>Text</type>
</CustomField>