2nd training/Community/Community/Community1/force-app/main/default/objects/Airway_Bill_Draft__c/fields/dawbFax_Int__c.field-meta.xml
<CustomField>
    <fullName>dawbFax_Int__c</fullName>
    <defaultValue>$Organization.Fax</defaultValue>
    <label>Fax (Int)</label>
    <length>25</length>
    <type>Text</type>
</CustomField>