2nd training/Community/Community/Community1/force-app/main/default/objects/Airway_Bill_Draft__c/fields/dawbFlight__c.field-meta.xml
<CustomField>
    <fullName>dawbFlight__c</fullName>
    <label>Flight</label>
    <length>45</length>
    <type>Text</type>
</CustomField>