2nd training/Community/Community/Community1/force-app/main/default/objects/Airway_Bill_Draft__c/fields/dawbFrom__c.field-meta.xml
<CustomField>
    <fullName>dawbFrom__c</fullName>
    <defaultValue>$User.FirstName+&quot; &quot;+ $User.LastName</defaultValue>
    <label>From</label>
    <length>45</length>
    <type>Text</type>
</CustomField>