2nd training/Community/Community/Community1/force-app/main/default/objects/Airway_Bill_Draft__c/fields/dawbHAWB__c.field-meta.xml
<CustomField>
    <fullName>dawbHAWB__c</fullName>
    <label>HAWB</label>
    <length>45</length>
    <type>Text</type>
</CustomField>