2nd training/Community/Community/Community1/force-app/main/default/objects/Airway_Bill_Draft__c/fields/dawbMarkings__c.field-meta.xml
<CustomField>
    <fullName>dawbMarkings__c</fullName>
    <defaultValue>&quot;As per above Consignee &amp; Notify Party&quot;</defaultValue>
    <label>Markings</label>
    <length>255</length>
    <type>Text</type>
</CustomField>