2nd training/Community/Community/Community1/force-app/main/default/objects/Airway_Bill_Draft__c/fields/dawbMAWB__c.field-meta.xml
<CustomField>
    <fullName>dawbMAWB__c</fullName>
    <label>MAWB</label>
    <length>45</length>
    <type>Text</type>
</CustomField>