2nd training/Community/Community/Community1/force-app/main/default/objects/Airway_Bill_Draft__c/fields/dawbPort_of_Disc__c.field-meta.xml
<CustomField>
    <fullName>dawbPort_of_Disc__c</fullName>
    <label>Port of Discharge</label>
    <length>45</length>
    <type>Text</type>
</CustomField>