2nd training/Community/Community/Community1/force-app/main/default/objects/Airway_Bill_Draft__c/fields/dawbRemark_Date__c.field-meta.xml
<CustomField>
    <fullName>dawbRemark_Date__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>