2nd training/Community/Community/Community1/force-app/main/default/objects/Airway_Bill_Draft__c/fields/dawbRemark_Time__c.field-meta.xml
<CustomField>
    <fullName>dawbRemark_Time__c</fullName>
    <defaultValue>&quot;before&quot;</defaultValue>
    <label>Time</label>
    <length>25</length>
    <type>Text</type>
</CustomField>