2nd training/Community/Community/Community1/force-app/main/default/objects/Airway_Bill_Draft__c/fields/dawbShipper__c.field-meta.xml
<CustomField>
    <fullName>dawbShipper__c</fullName>
    <label>Shipper</label>
    <type>TextArea</type>
</CustomField>