2nd training/Community/Community/Community1/force-app/main/default/objects/Airway_Bill_Draft__c/fields/dawbTo__c.field-meta.xml
<CustomField>
    <fullName>dawbTo__c</fullName>
    <label>To</label>
    <length>45</length>
    <type>Text</type>
</CustomField>