2nd training/Community/Community/Community1/force-app/main/default/objects/Airway_Bill_Draft__c/fields/dawbWeight_Dim__c.field-meta.xml
<CustomField>
    <fullName>dawbWeight_Dim__c</fullName>
    <defaultValue>&quot;Gross Wt:                Kgs&quot; &amp;BR() &amp;
&quot;(to be confirmed by                   )&quot;</defaultValue>
    <label>Weight</label>
    <type>TextArea</type>
</CustomField>