2nd training/Community/Community/Community1/force-app/main/default/objects/Airway_Bill_Draft__c/fields/dawbYourRef__c.field-meta.xml
<CustomField>
    <fullName>dawbYourRef__c</fullName>
    <label>Your Ref</label>
    <length>25</length>
    <type>Text</type>
</CustomField>