2nd training/Community/Community/Community1/force-app/main/default/objects/Airway_Bill_Draft__c/fields/Description_of_GoodsHK__c.field-meta.xml
<CustomField>
    <fullName>Description_of_GoodsHK__c</fullName>
    <defaultValue>&quot;Extremely fragile - Handle with great care and keep dry&quot;&amp;BR() &amp;&quot;Do not Tilt or Turn&quot;&amp;BR() &amp;
&quot;The cases must be kept upright at all times&quot;</defaultValue>
    <label>Description of Goods</label>
    <type>TextArea</type>
</CustomField>