2nd training/Community/Community/Community1/force-app/main/default/objects/Airway_Bill_Draft__c/fields/Details_AHK__c.field-meta.xml
<CustomField>
    <fullName>Details_AHK__c</fullName>
    <label>Clause A</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>