2nd training/Community/Community/Community1/force-app/main/default/objects/Airway_Bill_Draft__c/fields/Details_BHK__c.field-meta.xml
<CustomField>
    <fullName>Details_BHK__c</fullName>
    <label>Clause B</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>