2nd training/Community/Community/Community1/force-app/main/default/objects/Airway_Bill_Draft__c/fields/Dimension__c.field-meta.xml
<CustomField>
    <fullName>Dimension__c</fullName>
    <label>Dimension (cm)</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>