2nd training/Community/Community/Community1/force-app/main/default/objects/Airway_Bill_Draft__c/fields/Fax_IntHK__c.field-meta.xml
<CustomField>
    <fullName>Fax_IntHK__c</fullName>
    <defaultValue>&quot;+852 2612 2815&quot;</defaultValue>
    <label>Fax (Int)</label>
    <length>15</length>
    <type>Text</type>
</CustomField>