2nd training/Community/Community/Community1/force-app/main/default/objects/Airway_Bill_Draft__c/fields/Marks_NumbersHK__c.field-meta.xml
<CustomField>
    <fullName>Marks_NumbersHK__c</fullName>
    <defaultValue>&quot;Total _ Packages Only&quot;</defaultValue>
    <label>Marks &amp; Numbers</label>
    <type>TextArea</type>
</CustomField>