2nd training/Community/Community/Community1/force-app/main/default/objects/Airway_Bill_Draft__c/fields/Notify_Party__c.field-meta.xml
<CustomField>
    <fullName>Notify_Party__c</fullName>
    <label>Notify Party</label>
    <type>TextArea</type>
</CustomField>