2nd training/Community/Community/Community1/force-app/main/default/objects/Airway_Bill_Draft__c/fields/Remarks__c.field-meta.xml
<CustomField>
    <fullName>Remarks__c</fullName>
    <label>Remarks</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Shipment will be lodge on</fullName>
            </value>
            <value>
                <fullName>Shipment to be collected on</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>