2nd training/Community/Community/Community1/force-app/main/default/objects/Airway_Bill_Draft__c/fields/ToHK__c.field-meta.xml
<CustomField>
    <fullName>ToHK__c</fullName>
    <description>For HK staff</description>
    <label>To</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Norman Express Limited</fullName>
            </value>
            <value>
                <fullName>BEL International Logistics Limited</fullName>
            </value>
            <value>
                <fullName>Grand Power Express International Limited</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>